add catalog & includer url

--- a/app/order/templates/order/order.html
+++ b/app/order/templates/order/order.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} 
 {% load static %} 
 {% block content %}
-<div class="container-fluid px-4 py-5 mb-5 text-center">
+<div class="container p-5 m5 text-center">
   <div class="table-responsive">
     <h1 class="h2">Product List{{date}}</h1>
     <form action="">
@@ -50,7 +50,6 @@
             <th scope="col">NAME</th>
             <th scope="col">CODE</th>
             <th scope="col">quantity</th>
-            <th scope="col">Header</th>
           </tr>
         </thead>
         <tbody>
@@ -58,10 +57,9 @@
           {% for i in order %}
           <tr>
             <td>{{i.id}}</td>
-            <td>{{i.name}}</td>
-            <td>{{i.code}}</td>
+            <td>{{i.product}}</td>
+            <td>{{i.serial}}</td>
             <td><input type="text" class="form-control w-25 m-auto" /></td>
-            <td>{{i.date}}</td>
           </tr>
           {% endfor %}
         </tbody>
