--- a/app/goods/templates/goods/product.html
+++ b/app/goods/templates/goods/product.html
@@ -8,7 +8,7 @@
         <div class="card-body">
             <h5 class="card-title"> всего </h5>
             <p class="card-text"></p>
-            <a href="#" class="btn btn-primary">ADD</a>
+            <a href="{% url "order:order_add" product.slug %}" class="btn btn-primary">ADD</a>
         </div>
     </div>
 </div>
