--- a/app/order/templates/order/order.html
+++ b/app/order/templates/order/order.html
@@ -3,17 +3,17 @@
 {% block content %}
 <div class="container p-5 m5 text-center">
   <div class="table-responsive">
-    <h1 class="h2">Product List{{date}}</h1>
+    <h1 class="h2">ORDER{{date}}</h1>
     <form action="">
       <div class="container-fluid py-5">
         <div class="row">
           <div class="col-lg-2">
-            <label for="code" class="form-label">Data{{orderList.date}}</label>
+            <label for="code" class="form-label">Data</label>
             <input type="date" class="form-control" placeholder="{{order.date}}"/>
           </div>
           <div class="col-lg-2">
             <label for="name" class="form-label">Invoce</label>
-            <input type="text" class="form-control" />
+            <input type="text" class="form-control" value="00{{order.invoce}}-SO"/>
           </div>
           <div class="col-lg-4">
             <label for="quantity" class="form-label">Car brand</label>
@@ -22,8 +22,10 @@
               aria-label=".form-select-sm example"
             >
               <option selected>Select</option>
-              {% for i in order  %}
-              <option value="1">{{i.car_brand}}</option>
+              {% for brand in car_brand  %}
+              
+                <option value="1">{{brand.name}}</option>
+          
               {% endfor %}
              
             </select>
@@ -35,37 +37,39 @@
               aria-label=".form-select-sm example"
             >
               <option selected>Select</option>
-              {% for i in order  %}
-              <option value="1">{{i.car_model}}</option>
+              {% for model in car_model  %}
+              <option value="1">{{model.name}}</option>
               {% endfor %}
 
             </select>
           </div>
         </div>
       </div>
-      <table class="table table-striped table-sm">
+      <table class="table table-sm">
         <thead>
           <tr>
             <th scope="col">ID</th>
             <th scope="col">NAME</th>
             <th scope="col">CODE</th>
             <th scope="col">quantity</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider left">
 
           {% for i in order %}
           <tr>
             <td>{{i.id}}</td>
             <td>{{i.product}}</td>
             <td>{{i.serial}}</td>
-            <td><input type="text" class="form-control w-25 m-auto" /></td>
+            <td class="w-25 "><input type="text"  class="form-control w-25 d-inline" placeholder="{{i.quantity}}" /></td>
+            <td><a href="{% url "order:order_delete" i.id  %}" class="btn btn-outline-danger btn-sm align-middle">Delete</a></td>
           </tr>
           {% endfor %}
         </tbody>
       </table>
     </form>
-    <button type="button mb-4" class="btn btn-primary">Send list</button>
+    <button type="button mb-4" class="btn btn-primary">creat</button>
   </div>
 </div>
 {% endblock content %}
