--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -57,13 +57,29 @@
                 <li><a class="dropdown-item" href="{% url "order:order" %}">createorder</a></li>
                 <li><a class="dropdown-item" href="{% url "order:order_list" %}">order list</a></li>
                 <li><hr class="dropdown-divider" /></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+              > accaunt
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url "user:login" %}">login</a></li>
+                <li><a class="dropdown-item" href="{% url "user:register" %}">register</a></li>
+                <li><a class="dropdown-item divider" href="{% url "user:profile" %}">profile</a></li>
                 <li>
                   <a class="dropdown-item" href="{% url "admin:index" %}">admin</a>
                 </li>
+                <li><hr class="dropdown-divider"/></li>
+                <li>
+                  <a class="dropdown-item" href="{% url "user:logout" %}">logout</a>
+                </li>
               </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
